--- a/ASPNETKata.Tests/App.Example.config
+++ b/ASPNETKata.Tests/App.Example.config
@@ -9,7 +9,7 @@
   </appSettings>
 
   <connectionStrings>
-    <add name="Default" connectionString="Server=localhost;Database=adventureworks;Uid=notroot;Pwd=D61cdda6;" />
+    <add name="Default" connectionString="Server=localhost;Database=adventureworks;Uid=notroot;Pwd=dummyPassword;"/>
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
